@@ -1,7 +1,7 @@
 AddJournalButton <- function(label="ADD"){
   gbutton(label,handler=function(h,...) {
     if (is_projOpen(env=.rqda,conName="qdacon")) {
-      JournalNamesUpdate()
+      AddNewJournalFun()
     }
   }
           )
@@ -13,9 +13,9 @@ DeleteJournalButton <- function(label="Delete"){
       {
         del <- gconfirm("Really delete the journal?",icon="question")
         if (isTRUE(del)){
-          Selected <- svalue(.rqda$.JouranlNamesWidget)
+          Selected <- svalue(.rqda$.JournalNamesWidget)
           Encoding(Selected) <- "UTF-8"
-          dbGetQuery(.rqda$qdacon,sprintf("update attributes set status=0 where date=='%s'",Selected))
+          dbGetQuery(.rqda$qdacon,sprintf("update journal set status=0 where name=='%s'",Selected))
           JournalNamesUpdate()
         }
       }
@@ -23,15 +23,34 @@ DeleteJournalButton <- function(label="Delete"){
           )
 }
 
+RenameJournalButton <- function(label="Rename")
+{
+  gbutton(label,handler=function(h,...) {
+    if (is_projOpen(env=.rqda,conName="qdacon")) {
+##?????
+    }
+  })
+}
+
+
+OpenJournalButton <- function(label="Open")
+{
+  gbutton(label,handler=function(h,...) {
+    if (is_projOpen(env=.rqda,conName="qdacon")) {
+      ViewJournalWidget()
+    }
+  })
+}
 
 JournalNamesUpdate <- function(Widget=.rqda$.JournalNamesWidget,decreasing=FALSE,...)
 {
   if (isIdCurrent(.rqda$qdacon)){
-    journal <- dbGetQuery(.rqda$qdacon, "select date from attributes where status=1")
+    journal <- dbGetQuery(.rqda$qdacon, "select name from journal where status=1")
     if (nrow(journal)==0) {
       journal <- NULL
     } else {
-      journal <- journal[OrderByTime(journal[,1],decreasing=decreasing)]
+      journal <- journal[,1]
+      journal <- journal[OrderByTime(journal,decreasing=decreasing)]
     }
     tryCatch(Widget[] <- journal, error=function(e){})
   }
@@ -39,6 +58,65 @@ JournalNamesUpdate <- function(Widget=.rqda$.JournalNamesWidget,decreasing=FALSE
 
 AddNewJournalFun <- function(){
   if (is_projOpen(env=.rqda,"qdacon")) {
-    
+    tryCatch(eval(parse(text="dispose(.rqda$.AddNewJournalWidget")),error=function(e) {}) ## close the widget if open
+    assign(".AddNewJournalWidget",gwindow(title="Add New Journal.",parent=c(395,10),width=600,height=400),env=.rqda)
+    assign(".AddNewJournalWidget2",gpanedgroup(horizontal = FALSE, con=get(".AddNewJournalWidget",env=.rqda)),env=.rqda)
+    gbutton("Save Journal",con=get(".AddNewJournalWidget2",env=.rqda),handler=function(h,...){
+      title <- Sys.time()
+      if (nrow(dbGetQuery(.rqda$qdacon,sprintf("select name from journal where name=='%s'",title)))!=0) {
+        title <- paste("New",title)
+      }## Make sure it is unique
+      content <- svalue(textW)
+      content <- enc(content,encoding="UTF-8") ## take care of double quote.
+      ans <- dbGetQuery(.rqda$qdacon,sprintf("insert into journal (name, journal,date,owner, status)
+                             values ('%s', '%s', '%s', '%s', %i)",
+                             title, content, date(),.rqda$owner,1))
+      if (is.null(ans)) {
+        dispose(.rqda$.AddNewJournalWidget)
+        ##gmessage("Succeed.",con=T)
+      }
+      ## must put here rather than in AddJournalButton()
+      JournalNamesUpdate()
+
+    }
+            )## end of save button
+    tmp <- gtext(container=get(".AddNewJournalWidget2",env=.rqda))
+    font <- pangoFontDescriptionFromString("Sans 10")
+    gtkWidgetModifyFont(tmp@widget@widget,font)
+    assign(".AddNewJournalWidgetW", tmp, env=.rqda)
+    textW <- get(".AddNewJournalWidgetW",env=.rqda)
   }
 }
+
+ViewJournalWidget <- function(prefix="Journal",widget=.rqda$.JournalNamesWidget,dbTable="journal"){
+  if (is_projOpen(env=.rqda,"qdacon")) {
+      Selected <- svalue(widget)
+      if (length(Selected)==0){
+        gmessage("Select first.",icon="error",con=TRUE)
+      }
+      else {
+        tryCatch(eval(parse(text=sprintf("dispose(.rqda$.%smemo)",prefix))),error=function(e) {})
+        assign(sprintf(".%smemo",prefix),gwindow(title=sprintf("%s:%s",prefix,Selected),
+                                   parent=c(395,10),width=600,height=400),env=.rqda)
+        assign(sprintf(".%smemo2",prefix),
+               gpanedgroup(horizontal = FALSE, con=get(sprintf(".%smemo",prefix),env=.rqda)),
+               env=.rqda)
+        gbutton("Save Journal",con=get(sprintf(".%smemo2",prefix),env=.rqda),handler=function(h,...){
+          newcontent <- svalue(W)
+          newcontent <- enc(newcontent,encoding="UTF-8") ## take care of double quote.
+          Encoding(Selected) <- "UTF-8"
+          dbGetQuery(.rqda$qdacon,sprintf("update %s set journal='%s' where name='%s'",dbTable,newcontent,Selected))
+        }
+                )## end of save button
+        tmp <- gtext(container=get(sprintf(".%smemo2",prefix),env=.rqda))
+        font <- pangoFontDescriptionFromString("Sans 10")
+        gtkWidgetModifyFont(tmp@widget@widget,font)## set the default fontsize
+        assign(sprintf(".%smemoW",prefix),tmp,env=.rqda)
+        prvcontent <- dbGetQuery(.rqda$qdacon, sprintf("select journal from %s where name='%s'",dbTable,Selected))[1,1]
+        if (is.na(prvcontent)) prvcontent <- ""
+        Encoding(prvcontent) <- "UTF-8"
+        W <- get(sprintf(".%smemoW",prefix),env=.rqda)
+        add(W,prvcontent,do.newline=FALSE)
+      }
+    }
+  }
